add classes and padding image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<img src="assets/img/chat.svg" alt="ic/chat" class="button__icon" />
 				</button>
 
-				<button class="button">
+				<button class="header__icon-profile button">
 					<img
 						src="assets/img/profile.svg"
 						alt="ic/profile"
@@ -64,7 +64,7 @@
 					<div class="main__buttons--desktop">
 						<label class="main__label">
 							Оставить заявку
-							<button class="main__button">
+							<button class="main__button button">
 								<img
 									src="assets/img/repair.svg"
 									alt="ic/repair"
