--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						</label>
 						<label class="main__label">
 							Статус ремонта
-							<button class="main__button">
+							<button class="main__button button">
 								<img
 									src="assets/img/checkstatus.svg"
 									alt="ic/checkstatus"
